@@ -10,6 +10,7 @@ Adrian Phillips <a.phillips@dnmi.no>
 Alessandro Rubini <rubini@gnu.org>
 Alexander K. Hudek <alexhudek@home.com>
 Andrew Clausen <clausen@gnu.org>
+Ben Liblit <liblit@eecs.berkeley.edu>
 Bernhard Treutwein <Bernhard.Treutwein@Verwaltung.Uni-Muenchen.DE>
 Bodo Rueskamp <br@itchigo.com>.
 Bradford Hovinen <hovinen@redrose.net>
